@@ -470,10 +470,7 @@ task winAppImage(dependsOn: 'createBundlesDir', type: Exec) {
                 '--main-jar', 'mucommander-'+project.version+'.jar', \
                 '--main-class', 'com.mucommander.main.muCommander', \
                 '--java-options', \
-                '--add-exports java.desktop/com.apple.laf=ALL-UNNAMED \
-                    --add-exports java.desktop/com.apple.eio=ALL-UNNAMED \
-                    --add-exports java.desktop/com.apple.eawt=ALL-UNNAMED \
-                    --add-opens java.desktop/javax.swing.plaf.basic=ALL-UNNAMED \
+                '--add-opens java.desktop/javax.swing.plaf.basic=ALL-UNNAMED \
                     --add-opens java.base/java.io=ALL-UNNAMED \
                     --add-opens java.base/java.net=ALL-UNNAMED \
                     --add-opens java.transaction.xa/javax.transaction.xa=ALL-UNNAMED \
